--- a/static/button.css
+++ b/static/button.css
@@ -1,23 +1,24 @@
 /*https://www.creativejuiz.fr/blog/tutoriels/input-file-personnalise-css-js*/
-body {
+/*body {
 	font-family: "Open sans", "Segoe UI", "Segoe WP", Helvetica, Arial, sans-serif;
 	color: #7F8C9A;
 	background: #FCFDFD;
-}
+}*/
 
 .input-file-container {
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
 	width: 225px;
-	padding: 5px;
+	padding: 5px 0px;
 } 
 .js .input-file-trigger {
 	display: block;
-	padding: 14px 45px;
-	background: #39D2B4;
+	padding: 10px 0px;
+	/*background: #39D2B4;*/
+	background: #960018;
 	color: #fff;
-	font-size: 1em;
+	font-size: 12pt;
 	transition: all .4s;
 	cursor: pointer;
 }
@@ -33,19 +34,23 @@ body {
 .js .input-file:focus + .input-file-trigger,
 .js .input-file-trigger:hover,
 .js .input-file-trigger:focus {
-	background: #34495E;
-	color: #39D2B4;
+	
+	background: gray; 
+	/*color: #39D2B4; */
+	/*color: #960018;*/
+	color: white; 
+	/*orange #ef6e0b*/
 }
 
 .file-return {
 	margin: 0;
 }
-.file-return:not(:empty) {
+/*.file-return:not(:empty) {
 	margin: 1em 0;
-}
+}*/
 .js .file-return {
 	font-style: italic;
-	font-size: .9em;
+	font-size: 12pt;
 	font-weight: bold;
 }
 .js .file-return:not(:empty):before {
