Add missing files

--- a/static/leaflet.elevation-0.0.4_kris.css
+++ b/static/leaflet.elevation-0.0.4_kris.css
@@ -17,4 +17,7 @@
     font: 14px/16px "Helvetica Neue",Arial,Helvetica,sans-serif;
 }
 
-
+/*#elevation-div > div > svg > g > g.x.axis > text {
+	font-weight: bold;
+}
+*/
