--- a/static/cssapp.css
+++ b/static/cssapp.css
@@ -8,6 +8,7 @@ div {
     display: block;
 }
 
+.msg_flsh,
 .version {
     color: #960018;
 }
@@ -32,7 +33,7 @@ div {
 #map:fullscreen { width: 100% !important; height: 100% !important; z-index: 999; }
 .leaflet-pseudo-fullscreen { position: fixed !important; width: 100% !important; height: 100% !important; top: 0px !important; left: 0px !important; z-index: 999; }
 
-#drop_zone {
+/*#drop_zone {
     width: 230px;
     margin-left: auto;
     margin-right: auto;
@@ -44,13 +45,17 @@ div {
     text-align: center;
     font: 12pt "Tahoma", sans-serif;
     color: #bbb;
-}
-/*#list {
-    margin-left: auto;
-    margin-right: auto;
-    font: 10pt "Tahoma", sans-serif;
-    color: #bbb;
+
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;     /** IE6+, Firefox 7+, Opera 11+, Chrome, Safari **/
+    -o-text-overflow: ellipsis;  /** Opera 9 & 10 **/
 }*/
+
+#up_filename {
+    font: 10pt "Tahoma", sans-serif;
+}
 
 
 
@@ -97,6 +102,7 @@ div {
 #header, .heading {
     color: #333;
 }
+
 #header {
     width: 100%;
     margin: auto;
@@ -107,6 +113,10 @@ div {
     padding-top: 4px;
 }
 
+
+.header-text {
+    margin-top: -8px;
+}
 
 .heading {
     font-weight: 700;
@@ -121,7 +131,6 @@ div {
     box-shadow: 0 0 0 3px rgba(70,130,180,.2), 0 1px 5px rgba(0,0,0,.4);
     background: rgba(255,255,255,.9);
     border-radius: 5px;
-
 }
 
 .gpx-name {
@@ -137,7 +146,8 @@ div {
 
 .content, .content>.label, .content>.value, .heading {
     float: left;
-    padding: 0px 
+    padding: 0px;
+    /*font-size: 12px;*/
 }
 
 .content a {
