--- a/static/leaflet.elevation-0.0.4_kris.css
+++ b/static/leaflet.elevation-0.0.4_kris.css
@@ -7,17 +7,20 @@
 .steelblue-theme.leaflet-control.elevation .mouse-drag{fill:rgba(23,74,117,.4)}
 .steelblue-theme.leaflet-control.elevation .elevation-toggle{cursor:pointer;box-shadow:0 1px 7px rgba(0,0,0,.4);
 -webkit-border-radius:5px;border-radius:5px;width:36px;height:36px;background-color:#960018}
-.steelblue-theme.leaflet-control.elevation .elevation-toggle-icon{background:url(images/elevation-steelblue.png) no-repeat center center}
 .steelblue-theme.leaflet-control.elevation .area{fill:#960018}.steelblue-theme.leaflet-control.elevation .mouse-focus-line{pointer-events:none;stroke-width:1;stroke:#0d1821}
 .steelblue-theme.leaflet-control.elevation-collapsed .background{display:none}.steelblue-theme.leaflet-control.elevation-collapsed .elevation-toggle{display:block}
 .steelblue-theme.height-focus{stroke:#4682b4;fill:#4682b4}.steelblue-theme.height-focus.line{pointer-events:none;stroke-width:2}
 
 
 .steelblue-theme {
-    font: 14px/16px "Helvetica Neue",Arial,Helvetica,sans-serif;
+    font: 12px "Helvetica Neue",Arial,Helvetica,sans-serif;
 }
 
-/*#elevation-div > div > svg > g > g.x.axis > text {
+#elevation-div > div {
+	background-color:rgba(0,0,0,0)
+}
+
+#elevation-div > div > svg > g > g.y.axis > text,
+#elevation-div > div > svg > g > g.x.axis > text {
 	font-weight: bold;
 }
-*/
