Refactoring get_wpt_type function + overlay en qstring + test overpass js

--- a/static/cssapp.css
+++ b/static/cssapp.css
@@ -49,12 +49,17 @@ div {
     display: inline-block;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;     /** IE6+, Firefox 7+, Opera 11+, Chrome, Safari **/
-    -o-text-overflow: ellipsis;  /** Opera 9 & 10 **/
+    text-overflow: ellipsis;      IE6+, Firefox 7+, Opera 11+, Chrome, Safari 
+    -o-text-overflow: ellipsis;   Opera 9 & 10 
 }*/
 
 #up_filename {
     font: 10pt "Tahoma", sans-serif;
+/*    display: inline-block;*/
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;      /*IE6+, Firefox 7+, Opera 11+, Chrome, Safari */
+    -o-text-overflow: ellipsis;   /*Opera 9 & 10 */
 }
 
 
