--- a/static/leaflet.elevation-0.0.4_kris.css
+++ b/static/leaflet.elevation-0.0.4_kris.css
@@ -4,12 +4,12 @@
 -ms-border-radius:5px;-o-border-radius:5px;border-radius:5px}
 .steelblue-theme.leaflet-control.elevation .axis line,
 .steelblue-theme.leaflet-control.elevation .axis path{fill:none;stroke:#0d1821;stroke-width:2}
-.steelblue-theme.leaflet-control.elevation .mouse-drag{fill:rgba(23,74,117,.4)}
+.steelblue-theme.leaflet-control.elevation .mouse-drag{fill:rgba(150,0,24,.4)}
 .steelblue-theme.leaflet-control.elevation .elevation-toggle{cursor:pointer;box-shadow:0 1px 7px rgba(0,0,0,.4);
 -webkit-border-radius:5px;border-radius:5px;width:36px;height:36px;background-color:#960018}
 .steelblue-theme.leaflet-control.elevation .area{fill:#960018}.steelblue-theme.leaflet-control.elevation .mouse-focus-line{pointer-events:none;stroke-width:1;stroke:#0d1821}
 .steelblue-theme.leaflet-control.elevation-collapsed .background{display:none}.steelblue-theme.leaflet-control.elevation-collapsed .elevation-toggle{display:block}
-.steelblue-theme.height-focus{stroke:#4682b4;fill:#4682b4}.steelblue-theme.height-focus.line{pointer-events:none;stroke-width:2}
+.steelblue-theme.height-focus{stroke:black;fill:black}.steelblue-theme.height-focus.line{pointer-events:none;stroke-width:2}
 
 
 .steelblue-theme {
