--- a/static/cssapp.css
+++ b/static/cssapp.css
@@ -8,9 +8,32 @@ div {
     display: block;
 }
 
+
+div#dropzone {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999999999;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: visibility 175ms, opacity 175ms;
+    /*display: table;
+    text-shadow: 1px 1px 2px #000;*/
+    color: #fff;
+    background: rgba(0, 0, 0, 0.45);
+    /*font: bold 42px Oswald, DejaVu Sans, Tahoma, sans-serif;*/
+}
+
+
 .msg_flsh,
 .version {
     color: #960018;
+}
+
+.wip{
+    font: 8pt "Tahoma", sans-serif;
+    font-style: italic;
 }
 
 #map {
@@ -165,6 +188,8 @@ div {
     border-radius: 5px;
     background: rgba(255,255,255,.9);
 }
+
+
 
 
 /*a:link    {color:black; background-color:transparent; text-decoration:none}
