Defaut overpass API + Elevation chart width

--- a/static/cssapp2.css
+++ b/static/cssapp2.css
@@ -49,7 +49,7 @@ h3 {
     margin-top: 15px;
     /*font-style: italic;*/
     font-weight: bold;
-    color: #4a000c;
+    /*color: #4a000c;*/
 }
 
 .info_tab{
