Add loading + add number of coordinates points

--- a/static/cssapp2.css
+++ b/static/cssapp2.css
@@ -71,16 +71,11 @@ div#dropzone {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9999999999;
+    z-index: 9999999;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     transition: visibility 175ms, opacity 175ms;
-    /*display: table;
-    text-shadow: 1px 1px 2px #000;*/
-    color: #fff;
-    background: rgba(0, 0, 0, 0.45);
-    /*font: bold 42px Oswald, DejaVu Sans, Tahoma, sans-serif;*/
 }
 
 
@@ -102,6 +97,18 @@ div#dropzone {
     padding-left: 15px;
 }
 
+div#loading {
+    cursor: wait;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-image: url(/static/img/ajax-loader.gif);
+    background-repeat: no-repeat;
+    background-position: 30% 0;
+    cursor: wait;
+    position:absolute;
+    z-index:10000;
+}
 
 /*BUTTON*/
 
