Add BRouter link

--- a/templates/links_tab.html
+++ b/templates/links_tab.html
@@ -19,6 +19,7 @@ Le comparateur de carte IGN.
 Un outil pour vous aider à planifier vos photos en lumière naturelle.
 <br><a id="TPElink" href="http://photoephemeris.com/">http://photoephemeris.com/</a>
 
-
-
+<h3>BRouter-Web</h3>
+Online service of the BRouter routing engine.
+<br><a id="BRWlink" href="https://brouter.damsy.net/">https://brouter.damsy.net/</a>
 
