--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
 <!--     <meta property="og:image" content="http://www.mountaingpx.fr/static/img/presentation/2.png">
     <meta property="og:description" content="Outil open source permettant d'ajouter automatiquement des points d'intérêts (POI) sur une trace GPX" /> -->
     {# -- CSS -- #}
-    <link rel="shortcut icon" href={{ url_for('static', filename='favicon.ico') }}/>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">    
     <link rel="stylesheet" href="https://domoritz.github.io/leaflet-locatecontrol/dist/L.Control.Locate.min.css" />    
@@ -1208,6 +1208,21 @@ $(document).ready(function() {
           };        
         });
     });
+
+    $(function() {
+        $("#BRWlink").mousedown(function(e) {
+        if (e.which != 3) { 
+          e.preventDefault(); // if desired...
+          var url = 'https://brouter.damsy.net/#map=' + [
+                        map.getZoom(),
+                        map.getCenter().wrap().lat,
+                        map.getCenter().wrap().lng
+                    ].join('/') + '/OpenTopoMap';
+          window.open(url, '_blank');
+          };          
+        });
+    });
+
 
 
 </script>
